--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'css/style.css' %} " rel="stylesheet" />
         <link href="{% static '' %}main/form.css" rel="stylesheet" />
+        <link href="{% static '' %}main/profile.css" rel="stylesheet" />
     </head>
     <body>
     {% block header %} {% include 'main/header.html' %} {% endblock %}
