--- a/templates/main/header.html
+++ b/templates/main/header.html
@@ -11,7 +11,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Welcome {{ request.user }}</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#!">Profile</a></li>
+                            <li><a class="dropdown-item" href="{% url 'accounts:profile' user_id=request.user.id %}">Profile</a></li>
                             <li><hr class="dropdown-divider" /></li>
                             <li><a class="dropdown-item" href="{% url 'accounts:logout_view' %}">Log Out</a></li>
                         </ul>
