--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -14,7 +14,11 @@
         <div class="form-group">
             <button type="submit" class="btn btn-primary">Log in</button>
         </div>
+        <div class="clearfix">
+            <a href="{% url 'password_reset' %}" class="float-right">Forgot Password?</a>
+        </div>
     </form>
+    <p class="text-center"><a href="{% url 'accounts:register_view' %}">Create an Account</a></p>
 </div>
 
 {% endblock %}
