--- a/templates/password_reset/password_change.html
+++ b/templates/password_reset/password_change.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'account/base_profile.html' %}
 
-{% block content %}
+{% block profile_content %}
 <h6>Change Password</h6>
 <hr>
 <div class="style-form">
