--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,8 @@
         <link href="{% static 'css/style.css' %} " rel="stylesheet" />
         <link href="{% static '' %}main/form.css" rel="stylesheet" />
         <link href="{% static '' %}main/profile.css" rel="stylesheet" />
+        <link href="{% static '' %}main/shopping-cart.css" rel="stylesheet" />
+        <link href="{% static '' %}main/product_detail.css" rel="stylesheet" />
          <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
         <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
     </head>
