--- a/templates/main/header.html
+++ b/templates/main/header.html
@@ -22,11 +22,11 @@
                 {% endif %}
                     </ul>
                     <form class="d-flex">
-                        <button class="btn btn-outline-dark" type="submit">
-                            <i class="bi-cart-fill me-1"></i>
-                            Cart
-                            <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-                        </button>
+                <a class="btn btn-outline-dark" href="{% url 'product:checkout' %}">
+                    <i class="bi-cart-fill me-1"></i>
+                    Cart
+                    <span class="badge bg-dark text-white ms-1 rounded-pill">{{cart_total}}</span>
+                </a>
                     </form>
                 </div>
             </div>
