--- a/templates/main/header.html
+++ b/templates/main/header.html
@@ -9,7 +9,7 @@
                         <li class="nav-item"><a class="nav-link" href="{% url 'product:products' %}">Products</a></li>
                {% if user.is_authenticated %}
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Welcome {{ request.user }}</a>
+                        <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> {{ request.user }}</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="{% url 'accounts:profile' user_id=request.user.id %}">Profile</a></li>
                             <li><hr class="dropdown-divider" /></li>
